Additional fixes for Berd's animations.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -85,8 +85,6 @@
 							set(me.velocity_y, 600),
 							set(me.velocity_x, 500),
 							schedule(1,	[
-								set(me._current_special_flight_anim, 'freefall'),
-								set(me._is_flying, true),
 								set(level.player.mid_xy, [123,-1157]),
 								set(level.player.animation, 'freefall'),
 								set(level.player.velocity_y, 600),
@@ -95,9 +93,16 @@
 							(obj frogatto_playable <- level.player).do_upon_landing( [def() shake_screen(200, 200, 100, 100), def() sound_falloff('frogatto-fall-thump.wav')] ),
 							schedule(200,fire_event(me, 'script1')),
 						]",
-			"on_process": "if(cycle < 60, [add(level.player.velocity_x, sin(level.cycle*2)*15)])",
+			"on_process": "[
+				if(cycle < 60, [add(level.player.velocity_x, sin(level.cycle*2)*15)]),
+				proto_event('flying_npc', 'process'),
+			]",
 			"on_script1": "fire_event(get_object_or_die(level,'script_controller'),'script2')",
 			"type": "berd_npc",
+			"property_data": {
+				"_current_special_flight_anim": "freefall",
+				"start_mode": "fly",
+			},
 			"x": 128,
 			"y": -1184
 		},
@@ -106,41 +111,44 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "script_controller",
-			"on_script2": "[begin_skip_dialog_sequence(),
-							speech_dialog(
-								level.player,	[~Ouch.~],
-												set(level.player.facing, sign(berd.mid_x - level.player.mid_x)),
-												[~...~],
-												[~I want my money back.~],
-								berd,			[~....~],
-												set(level.player.animation, 'emote_geez'),
-								level.player,	[~You doing alright there?~],
-												set(level.player.animation, 'emote_confused'),
-												[~...Berd?~],
-												set(berd.animation, 'stand_back_up'),
-								berd,			[~After a fashion, yes.~],
-												set(berd.animation, 'emote_angry'),
-												[~Remind me never to talk myself\\ninto a tomfool plan like <em>that</em> again.~],
-												set(berd.animation, 'emote_angry'),
-												[~So where to next?~],
-												set(level.player.animation, 'emote_confused'),
-								level.player,	[~Nowhere.\\nI'm stuck up here.~],
-												set(berd.animation, 'emote_confused'),
-								berd,			[~Oh?  <em>Oh.</em>  Yes you are.\\nThis is a pillar, isn't it?~],
-												set(level.player.animation, 'emote_geez'),
-								level.player,	[~Yeah, I'm not keen on <em>another</em> attempt at flight,\\nso quickly after our first...~],
-												set(level.player.animation, 'emote_confused'),
-												[~Uhh... for lack of a better plan....\\nWhy don't you go get a rope?~],
-												set(berd.animation, 'emote_confused'),
-								berd,			[~Where do I find one of those?~],
-												set(level.player.animation, 'emote_geez'),
-								level.player,	[~I don't know, go look in Tempo Village.\\nI'm sure someone can loan you one.~],
-												set(level.player.animation, 'emote_oh'),
-												[~Just ... do me a favor and please hurry.\\nI don't want to stay stuck up here.~],
-												set(berd.animation, 'emote_talk'),
-								berd,			[~Will do.\\nBack in a jiffy!~],
-												fire_event(me, 'script3')
-										)] where berd = get_object_or_die(level,'berd')",
+			"on_script2": "[
+				begin_skip_dialog_sequence(),
+				set(berd._current_special_flight_anim, ''),
+				speech_dialog(
+					level.player,	[~Ouch.~],
+									set(level.player.facing, sign(berd.mid_x - level.player.mid_x)),
+									[~...~],
+									[~I want my money back.~],
+					berd,			[~....~],
+									set(level.player.animation, 'emote_geez'),
+					level.player,	[~You doing alright there?~],
+									set(level.player.animation, 'emote_confused'),
+									[~...Berd?~],
+									set(berd.animation, 'stand_back_up'),
+					berd,			[~After a fashion, yes.~],
+									set(berd.animation, 'emote_angry'),
+									[~Remind me never to talk myself\\ninto a tomfool plan like <em>that</em> again.~],
+									set(berd.animation, 'emote_angry'),
+									[~So where to next?~],
+									set(level.player.animation, 'emote_confused'),
+					level.player,	[~Nowhere.\\nI'm stuck up here.~],
+									set(berd.animation, 'emote_confused'),
+					berd,			[~Oh?  <em>Oh.</em>  Yes you are.\\nThis is a pillar, isn't it?~],
+									set(level.player.animation, 'emote_geez'),
+					level.player,	[~Yeah, I'm not keen on <em>another</em> attempt at flight,\\nso quickly after our first...~],
+									set(level.player.animation, 'emote_confused'),
+									[~Uhh... for lack of a better plan....\\nWhy don't you go get a rope?~],
+									set(berd.animation, 'emote_confused'),
+					berd,			[~Where do I find one of those?~],
+									set(level.player.animation, 'emote_geez'),
+					level.player,	[~I don't know, go look in Tempo Village.\\nI'm sure someone can loan you one.~],
+									set(level.player.animation, 'emote_oh'),
+									[~Just ... do me a favor and please hurry.\\nI don't want to stay stuck up here.~],
+									set(berd.animation, 'emote_talk'),
+					berd,			[~Will do.\\nBack in a jiffy!~],
+									fire_event(me, 'script3')
+				)
+			] where berd = (obj berd_npc <- get_object_or_die(level,'berd'))",
 			"on_script3": "[berd.fly_to([{x: -250, y:-1400}], false, def() -> commands [set(berd.paused, true)]),
 							schedule(120, fire_event(me,'script4'))]  where berd = (obj berd_npc <- get_object_or_die(level,'berd'))",
 			"on_script4": "[
