--- a/data/object_prototypes/general/flying_npc.cfg
+++ b/data/object_prototypes/general/flying_npc.cfg
@@ -21,6 +21,8 @@ properties: {
 		;
 		initialize_regular_behavior,
 		fire_event('enter_level'),
+		;
+		end_anim_decisions
 	]",
 
 
@@ -102,8 +104,11 @@ properties: {
 		should_turn__standing_npc_behavior
 	)",
 
-	should_turn_during_flight: "bool :: ((_current_target = null) or (sign(mid_x - _current_target.x) = facing)) and
-										animation not in ['turn_fly']",
+
+	should_turn_during_flight: "bool :: (_current_target != null) and (not is_facing_target)",
+
+	is_facing_target: "bool :: facing = if(_current_target.x < me.mid_x, -1, 1) asserting _current_target != null",
+				
 
 #-------------------------- target-seeking --------------------------#
 	target_acquisition_bounds: "decimal :: if(is_at_last_node, 50, 200)",
