--- a/data/object_prototypes/general/standing_npc.cfg
+++ b/data/object_prototypes/general/standing_npc.cfg
@@ -43,6 +43,7 @@ properties: {
 	*/	core_anims: "[string] :: ['stand','turn']",
 	standing_animations: "[string] :: ['stand']", //a list of walking animations - inheritors may supply more than this
 
+	uninterruptible_animations: "[string] :: []",
 
 #-------------------------- animation sets --------------------------#
 	_current_special_stand_anim: { type: "string", default: '' },	
@@ -74,7 +75,7 @@ properties: {
 
 
 #-------------------------- turning criterion --------------------------#
-	can_turn: "bool :: (level.cycle - me._last_turned > 10)",
+	can_turn: "bool :: (level.cycle - me._last_turned > 10) and (animation not in uninterruptible_animations)",
 
 	should_turn: "bool :: should_turn__standing_npc_behavior",
 
