--- a/data/objects/props-interactive/npcs/berd_npc.cfg
+++ b/data/objects/props-interactive/npcs/berd_npc.cfg
@@ -7,7 +7,11 @@ solid_area: [9,10,29,32],
 
 
 properties: {
+	standing_animations: "[string] :: ['stand', 'prostrate']",
 	flight_animations: "[string] :: ['fly', 'turn_fly','takeoff', 'freefall']",
+
+	uninterruptible_animations: "['prostrate', 'faceplant', 'stand_back_up_anim']",
+
 },
 
 
@@ -16,10 +20,15 @@ on_flapsound: "sound_falloff('wing-flap-big'+1d6+'.wav')",
 on_armraise: "sound_falloff('feather-lift.wav')",
 on_armdrop: "sound_falloff('feather-drop.wav')",
 on_headscratch: "sound_falloff('feather-scratch'+1d4+'.wav')",
-on_collide_feet: "[if(animation = 'freefall',
-						animation('faceplant'),
-						animation('stand'),
-					),set(velocity_x,0),fire_event('landed')]",
+on_collide_feet: "[
+	if(_current_special_flight_anim = 'freefall',
+		animation('faceplant'),
+		animation('stand'),
+	)
+	;
+	set(velocity_x,0),
+	set(_is_flying, false),
+]",
 
 on_flap: "if(velocity_y > -800,add(velocity_y,-400))",
 on_end_perch_anim: "animation('perch')",
@@ -32,9 +41,15 @@ on_end_emote_confused_anim: "animation('stand')",
 on_end_emote_angry_anim: "animation('stand')",
 
 on_end_freefall_anim: "animation('freefall')",
-on_end_faceplant_anim: "animation('prostrate')",
+on_end_faceplant_anim: "[
+	animation('prostrate'),
+	set(_current_special_stand_anim, 'prostrate'),
+]",
 on_end_prostrate_anim: "animation('prostrate')",
-on_end_stand_back_up_anim: "animation('stand')",
+on_end_stand_back_up_anim: "[
+	animation('stand'),
+	set(_current_special_stand_anim, ''),
+]",
 
 animation: [
 	{
