Fixed the animation handling for the start of berd's pre moth-boss cutscene.

--- a/data/object_prototypes/general/standing_npc.cfg
+++ b/data/object_prototypes/general/standing_npc.cfg
@@ -62,7 +62,7 @@ properties: {
 	)",
 	
 	
-	change_to_stand_anim: "set(animation,
+	change_to_stand_anim: "commands :: set(animation,
 		if(_current_special_stand_anim != '',
 			_current_special_stand_anim,
 			'stand'
@@ -143,9 +143,7 @@ on_end_anim: "if(not animation in core_anims,
 	end_anim_decisions_for_custom_anims,
 	if(_paused,
 		change_to_stand_anim,
-		//if(animation not in ['turn'] and time_in_animation >= animation_obj.total_animation_time,
-			end_anim_decisions
-		//)
+		end_anim_decisions
 	)
 )",
 	
