--- a/data/objects/props-interactive/npcs/berd_npc.cfg
+++ b/data/objects/props-interactive/npcs/berd_npc.cfg
@@ -10,7 +10,27 @@ properties: {
 	standing_animations: "[string] :: ['stand', 'prostrate']",
 	flight_animations: "[string] :: ['fly', 'turn_fly','takeoff', 'freefall']",
 
-	uninterruptible_animations: "['prostrate', 'faceplant', 'stand_back_up_anim']",
+	uninterruptible_animations: "['prostrate', 'faceplant', 'stand_back_up']",
+	end_anim_decisions_for_custom_anims: "commands :: [
+		switch(animation,
+			'faceplant', [
+				animation('prostrate'),
+				set(_current_special_stand_anim, 'prostrate'),
+			],
+			animation(animation)
+		)
+	]",
+
+	change_to_stand_anim: "[
+			if(animation not in uninterruptible_animations,
+				set(animation,
+					if(_current_special_stand_anim != '',
+						_current_special_stand_anim,
+						'stand'
+					)
+				)
+			)
+	]",
 
 },
 
@@ -41,10 +61,7 @@ on_end_emote_confused_anim: "animation('stand')",
 on_end_emote_angry_anim: "animation('stand')",
 
 on_end_freefall_anim: "animation('freefall')",
-on_end_faceplant_anim: "[
-	animation('prostrate'),
-	set(_current_special_stand_anim, 'prostrate'),
-]",
+
 on_end_prostrate_anim: "animation('prostrate')",
 on_end_stand_back_up_anim: "[
 	animation('stand'),
