Fixed an issue where prospera's turn animation wasn't appropriate for usage whilst she's standing.

--- a/data/objects/props-interactive/npcs/prospera_npc.cfg
+++ b/data/objects/props-interactive/npcs/prospera_npc.cfg
@@ -7,6 +7,20 @@ solid_area: [18,24,38,50],
 
 properties: {
 	item_presentation_offset: "{x: int, y: int} :: {x: -34, y: -50 }",
+
+	turn_around: "commands :: if(can_turn,
+		[
+			/*
+				Most of this function is cloned from the standing_npc version.  The main reason we have this is that prospera's actual turn animation is meant to provide a visual tween between her walk animations, in which she's facing directly to the side.   During her stand animation, she is, instead, facing mostly towards the screen (perhaps 15° away).   So basically, if she's standng, we just want to skip the animation entirely.
+			*/
+			if(_is_walking,
+				if('turn' in available_animations, animation('turn')),
+			),
+			set(facing, -facing),
+			set(_last_turned, level.cycle),
+		],
+		change_to_stand_anim
+	)",
 },
 
 
