Fixed a new type query that isn't always valid (there are scenes with walking NPCs where the player isn't frogatto.

--- a/data/object_prototypes/general/walking_npc.cfg
+++ b/data/object_prototypes/general/walking_npc.cfg
@@ -164,16 +164,16 @@ properties: {
 				First, if we're talking to someone, defer to the standard standing behavior, because that has the correct stuff for facing the person being talked to.
 				If we're not talking to someone though, and we potter, we'll typically want to ignore the normal facing contraints and walk around and do our own thing.
 			*/
-			if(frogatto.currently_speaking_to != null,
+			if(player_is_speaking_to_someone,
 				should_turn__standing_npc_behavior,
 				if(potters = 'limits' or potters = 'always',
 					should_potter,
 					should_turn__standing_npc_behavior
 				)
 			)
-		) where frogatto = (obj frogatto_playable <- level.player)",
+		)",
 							
-	should_potter: "bool :: if(_target or (frogatto.currently_speaking_to != null),
+	should_potter: "bool :: if(_target or player_is_speaking_to_someone,
 								false,  /*if we have a target, don't potter at all.  Same with conversing with someone.*/
 								if((level.cycle - _last_started_pottering) < potter_timeout, 
 									false,
@@ -188,8 +188,13 @@ properties: {
 										)
 									)
 								)
-							) where frogatto = (obj frogatto_playable <- level.player)",
+							)",
 	
+	player_is_speaking_to_someone: "if(level.player is obj frogatto_playable,
+		level.player.currently_speaking_to != null,
+		false
+	)",
+
 	is_outside_limits: "bool :: 
 				if(facing > 0,
 					if(mid_x + img_margin > max_x, true, false), 
