Made our level controllers (and cutscene triggers) delay activation until the player is done with a conversation.

--- a/data/objects/effects/misc/cross_level_cutscene_self_trigger.cfg
+++ b/data/objects/effects/misc/cross_level_cutscene_self_trigger.cfg
@@ -38,10 +38,27 @@ properties: {
 							teleport(_cutscene_level,_cutscene_trigger_label,'instant'),
 							screen_flash([0,0,0,255], [0,0,0,-5], 50)
 						])",
-	statefully_turn_off: "commands :: []", 
+	statefully_turn_off: "commands :: []",
+
+
+	player_is_speaking_to_someone: "if(level.player is obj frogatto_playable,
+		level.player.currently_speaking_to != null,
+		false
+	)",
 },
 
-on_process: "if(level.player.mid_x > _x_bound and level.player.mid_x < _x2_bound  and level.player.mid_y > _y_bound and level.player.mid_y < _y2_bound and cycle - _last_triggered > 250, [fire_event('triggered'),set(_last_triggered,cycle)])",
+on_process: "if(
+	level.player.mid_x > _x_bound and
+	level.player.mid_x < _x2_bound and
+	level.player.mid_y > _y_bound and
+	level.player.mid_y < _y2_bound and
+	cycle - _last_triggered > 250 and
+	(not player_is_speaking_to_someone),
+	[
+		fire_event('triggered'),
+		set(_last_triggered,cycle)
+	]
+)",
 
 on_triggered: "do_toggle",
 
