--- a/data/objects/effects/misc/level_controller.cfg
+++ b/data/objects/effects/misc/level_controller.cfg
@@ -7,6 +7,10 @@ hidden_in_game: true,
 prototype: ["standard_values"],
 zorder: "@include data/zorder.cfg:in_front_of_everything",
 
+editor_info: {
+	category: "controllers",
+},
+
 /*
 	Level controllers are generic objects designed to be used as triggers for scripts.
 	Various usages include modifying:
@@ -24,13 +28,28 @@ properties: {
 	_x2_bound: { type: "int", editor_info: { type: "x", value: "x+150" } },
 	_y_bound: { type: "int", editor_info: { type: "y", value: "y-100" } },
 	_y2_bound: { type: "int", editor_info: { type: "y", value: "y+150" } },
+
+	player_is_speaking_to_someone: "if(level.player is obj frogatto_playable,
+		level.player.currently_speaking_to != null,
+		false
+	)",
+
 },
 
-on_process: "if(level.player.mid_x > _x_bound and level.player.mid_x < _x2_bound  and level.player.mid_y > _y_bound and level.player.mid_y < _y2_bound and cycle - _last_triggered > 250, [fire_event('triggered'),set(_last_triggered,cycle)])",
+on_process: "if(
+	level.player.mid_x > _x_bound and
+	level.player.mid_x < _x2_bound  and
+	level.player.mid_y > _y_bound and
+	level.player.mid_y < _y2_bound and
+	cycle - _last_triggered > 250 and
+	(not player_is_speaking_to_someone),
+	[
+		fire_event('triggered'),
+		set(_last_triggered,cycle)
+	]
+)",
+
 on_triggered: "",
-editor_info: {
-	category: "controllers",
-},
 
 animation: {
 	id: "normal",
