--- a/data/level/Dungeon/milgrams-basement-junction.cfg
+++ b/data/level/Dungeon/milgrams-basement-junction.cfg
@@ -5,20 +5,6 @@
 	"background_offset": [0,0],
 	"character": [
 		{
-			"_uuid": "6342a1dfa10143fb94fc8b56c6cdd996",
-			"current_frame": "normal",
-			"custom": true,
-			"is_human": true,
-			"label": "_5360d217",
-			"objects_destroyed": {
-				"level": "milgrams-basement-junction.cfg",
-				"objects": []
-			},
-			"type": "frogatto_playable",
-			"x": 416,
-			"y": 576
-		},
-		{
 			"_uuid": "5278b9d50bb24c6eb6b9a1d6614790b1",
 			"current_frame": "normal",
 			"custom": true,
@@ -261,15 +247,15 @@
 			"property_data": {
 				"_cutscene_level": "cutscene-milgram-3.cfg",
 				"_cutscene_trigger_label": "cutscene_controller",
-				"_x2_bound": -48,
-				"_x_bound": -144,
-				"_y2_bound": 960,
-				"_y_bound": 496,
+				"_x2_bound": 96,
+				"_x_bound": 32,
+				"_y2_bound": 944,
+				"_y_bound": 416,
 				"event": "cutscene_milgram_3_shown"
 			},
 			"type": "cross_level_cutscene_self_trigger",
-			"x": 64,
-			"y": 656
+			"x": 192,
+			"y": 640
 		},
 		{
 			"_uuid": "f73b5c88273140e49d27917b56f96291",
@@ -571,16 +557,33 @@
 			"custom": true,
 			"label": "_7bf120c9",
 			"property_data": {
-				"shadow_opacity": 0.7,
 				"shadow_color": {
-					"r": 0.02745098, //7
+					"b": 0.090196,
 					"g": 0,
-					"b": 0.09019607 //23
-				}
+					"r": 0.02745
+				},
+				"shadow_opacity": 0.7
 			},
 			"type": "shadow_effect_controller",
 			"x": 437,
 			"y": 245
+		},
+		{
+			"_uuid": "b9db96115405491eb13bb5dc287c3586",
+			"current_frame": "stand",
+			"custom": true,
+			"is_human": true,
+			"label": "_4e8ae90a",
+			"objects_destroyed": {
+				"level": "milgrams-basement-junction.cfg",
+				"objects": []
+			},
+			"property_data": {
+				"original_level_we_spawned_on": "milgrams-basement-junction.cfg"
+			},
+			"type": "frogatto_playable",
+			"x": -288,
+			"y": 704
 		}
 	],
 	"dimensions": [-640,-512,2047,1055],
