Added a guard statement so that the swallowing logic will 'abort', and do nothing, if a victim has no valid thrown type.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -114,7 +114,8 @@ properties: {
 		*/
 	convert_to_thrown_variant: "commands :: 
 		if(is_object(me.thrown_type),
-			[
+		null
+			/*[
 				pre_thrown_behavior_trigger
 				;
 				[
@@ -127,7 +128,7 @@ properties: {
 					remove_attaches_from_level(me),
 					add_object(throwable_obj),
 				]
-			] where throwable_obj = (obj throwable <- replacement_object_with_preserved_attributes( me, me.thrown_type, me.hitpoints, me.max_hitpoints ))
+			] where throwable_obj = (obj throwable <- replacement_object_with_preserved_attributes( me, me.thrown_type, me.hitpoints, me.max_hitpoints ))*/
 		)",
 	
 
