--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3178,54 +3178,56 @@ object_type: [
 			collide_obj.pre_thrown_behavior_trigger
 			;
 			remove_object(collide_obj),
-			[
-				if(collide_obj is obj padlock_key, set((obj padlock_key <- throwable_obj).valid_levels, collide_obj.valid_levels)),
-				
-				/*
-					TENTATIVE:
-					This little fix right here (forcing `_constructed` to true) is a fix for a very odd edge case we ran into.   Normally the workflow for these attaches is:
-					• Spawn the original object (such as a glowing ant), with the appropriate attaches (such as a glow).
-					• Get grabbed.
-					• Spawn a `glowing_ant.thrown` replacement.  ONLY BY CONVENTION, these typically never spawned attaches of their own.  They were just really basic/simple objects that represented the behavior of a thrown projectile - if they came from a glowing ant, they'd still glow, but not because they created their own attach for the glow - they merely had it passed to them from the original.
-					• This `glowing_ant.thrown` replacement would be swallowed, stored, and spit back out.  Again; it had created no attaches of its own, but merely inherited them from the original `glowing_ant`.
-					• Sooner or later, it would pop back upright, and replace itself with the original `glowing_ant`.  This object would have `_constructed` set to true, so it would not attempt to recreate any of the original attaches.  Conveniently, since they were passed along, the desired ones were still all there, so the object would look good.
+			if( is_object(collide_obj.thrown_type),
+				[
+					if(collide_obj is obj padlock_key, set((obj padlock_key <- throwable_obj).valid_levels, collide_obj.valid_levels)),
 					
-					One notable thing here is this behavior works correctly for two critical use-cases; attaches we create ourselves (glowing because we're a glow-bug), but also works correctly for other use-cases (being green because we're poisoned).
+					/*
+						TENTATIVE:
+						This little fix right here (forcing `_constructed` to true) is a fix for a very odd edge case we ran into.   Normally the workflow for these attaches is:
+						• Spawn the original object (such as a glowing ant), with the appropriate attaches (such as a glow).
+						• Get grabbed.
+						• Spawn a `glowing_ant.thrown` replacement.  ONLY BY CONVENTION, these typically never spawned attaches of their own.  They were just really basic/simple objects that represented the behavior of a thrown projectile - if they came from a glowing ant, they'd still glow, but not because they created their own attach for the glow - they merely had it passed to them from the original.
+						• This `glowing_ant.thrown` replacement would be swallowed, stored, and spit back out.  Again; it had created no attaches of its own, but merely inherited them from the original `glowing_ant`.
+						• Sooner or later, it would pop back upright, and replace itself with the original `glowing_ant`.  This object would have `_constructed` set to true, so it would not attempt to recreate any of the original attaches.  Conveniently, since they were passed along, the desired ones were still all there, so the object would look good.
+						
+						One notable thing here is this behavior works correctly for two critical use-cases; attaches we create ourselves (glowing because we're a glow-bug), but also works correctly for other use-cases (being green because we're poisoned).
+						
+						--The Problem:--
+						A few rare objects are `throwable_projectile`s.  They don't have a separate 'dumb utility object' as a thrown type - they ARE the thrown type.
+						• Upon being spawned the first time, they'd create their attaches like everything is supposed to.
+						• But when a thrown copy is made of them - it's the same type of object, and that type of object happened to be a kind that spawned decorative attaches.   So now we have two copies of them.  Oops.
+
+						As long as we're doing all the cosmetic-attache spawning in the constructor, the following should quell that problem.  This is marked as 'tentative' because like anything sufficiently complicated, we can't see the full cascade of side effects, and it might lead to some new bugs of its own.
+
+
+						UPDATE:  we've discovered that this breaks `padlock_key`s, and we're hoping that our system of attache-reassignment-to-variable-names will make it so the new, 'would be duplicate' attaches never get added to the level.  If we re-assign that variable from pointing at a new object, to pointing at the old one, before the `add_object()` call, we'll be safe.
+
+					set(throwable_obj._constructed, true)
+					;
+					*/
+					remap_attaches_from_old_to_new( collide_obj, throwable_obj),
 					
-					--The Problem:--
-					A few rare objects are `throwable_projectile`s.  They don't have a separate 'dumb utility object' as a thrown type - they ARE the thrown type.
-					• Upon being spawned the first time, they'd create their attaches like everything is supposed to.
-					• But when a thrown copy is made of them - it's the same type of object, and that type of object happened to be a kind that spawned decorative attaches.   So now we have two copies of them.  Oops.
-
-					As long as we're doing all the cosmetic-attache spawning in the constructor, the following should quell that problem.  This is marked as 'tentative' because like anything sufficiently complicated, we can't see the full cascade of side effects, and it might lead to some new bugs of its own.
-
-
-					UPDATE:  we've discovered that this breaks `padlock_key`s, and we're hoping that our system of attache-reassignment-to-variable-names will make it so the new, 'would be duplicate' attaches never get added to the level.  If we re-assign that variable from pointing at a new object, to pointing at the old one, before the `add_object()` call, we'll be safe.
-
-				set(throwable_obj._constructed, true)
-				;
-				*/
-				remap_attaches_from_old_to_new( collide_obj, throwable_obj),
+					set(attached_objects, [throwable_obj]), set(_cycle_grabbed, level.cycle),  // <-- The constructor for throwable_obj is triggered here, because this is considered as adding it to the game.
+					
+					bind_command(def() throwable_obj.set_to_animation('normal')),
+					fire_event(throwable_obj, 'been_grabbed'),
+					fire_event(throwable_obj, 'swallowed'),
+					set(_swallowed, throwable_obj),
+					set(throwable_obj.event_handlers, collide_obj.event_handlers),
+					if(collide_obj is obj throwable, set(throwable_obj.juggled, (obj throwable <- collide_obj).juggled)),
+					remove_attaches_from_level(collide_obj),
+	
 				
-				set(attached_objects, [throwable_obj]), set(_cycle_grabbed, level.cycle),  // <-- The constructor for throwable_obj is triggered here, because this is considered as adding it to the game.
-				
-				bind_command(def() throwable_obj.set_to_animation('normal')),
-				fire_event(throwable_obj, 'been_grabbed'),
-				fire_event(throwable_obj, 'swallowed'),
-				set(_swallowed, throwable_obj),
-				set(throwable_obj.event_handlers, collide_obj.event_handlers),
-				if(collide_obj is obj throwable, set(throwable_obj.juggled, (obj throwable <- collide_obj).juggled)),
-				remove_attaches_from_level(collide_obj),
- 
-			
-				if(collide_obj.physical_size > 8,[  //things below this get 'consumed' rather than becoming spittable
-					add(level.player.gravity_shift, -throwable_obj.carry_gravity),
-				],[
-					//TODO: I'd like to make these values inherit-via-delegation, rather than be 'unit tested' here to be equivalent, but cannot atm.  I.e. all thrown objects would have a class-only representation of their source type, and could reference its static properties.  I considered making this mutable and setting it, but that's merely to avoid code duplication, and would be much worse due to violating constness.
-					null asserting collide_obj.physical_size = throwable_obj.physical_size,
-					collide_obj.get_hit_sourceless(enum neutral, kill_anything),
-				]),
-			] where throwable_obj = (obj throwable <- replacement_object_with_preserved_attributes( collide_obj, collide_obj.thrown_type, collide_obj.hitpoints, collide_obj.max_hitpoints )),
+					if(collide_obj.physical_size > 8,[  //things below this get 'consumed' rather than becoming spittable
+						add(level.player.gravity_shift, -throwable_obj.carry_gravity),
+					],[
+						//TODO: I'd like to make these values inherit-via-delegation, rather than be 'unit tested' here to be equivalent, but cannot atm.  I.e. all thrown objects would have a class-only representation of their source type, and could reference its static properties.  I considered making this mutable and setting it, but that's merely to avoid code duplication, and would be much worse due to violating constness.
+						null asserting collide_obj.physical_size = throwable_obj.physical_size,
+						collide_obj.get_hit_sourceless(enum neutral, kill_anything),
+					]),
+				] where throwable_obj = (obj throwable <- replacement_object_with_preserved_attributes( collide_obj, collide_obj.thrown_type, collide_obj.hitpoints, collide_obj.max_hitpoints ))
+			),
 			lib.sound.play_sound(me, 'Gulp'),
 		]) where collide_obj = obj hittable <- arg.collide_with",
 		
