Added a hax entry for nene's basement quest.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -296,11 +296,19 @@ properties: {
 	*/
 
 
+	hax_nene: "[  /* just finished nene's basement quest */
+		;set_item_amount(enum item_fire_breath_talisman, 1),
+		
+		;store_event('talked_to_nene', 1),
+		;store_event('nenes_treasure_chest_unlocked', 1),
+		;store_event('nenes_basement_ants_killed', 3),
+	]",
 
 	hax_mtm: "[  /* being past Mortimer's house */
+		;hax_nene,
+
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_heart_container, 3),
-		;set_item_amount(enum item_fire_breath_talisman, 1),
 		
 		store_event('stonepipe_bridge_fight_won',1),
 		store_event('berds_post_airplane_boss_speech',1),
