--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -356,7 +356,7 @@ properties: {
 
 	current_underwater_ability: { type: "InventoryItemType", init: "enum item_underwater_bubble_attack" },
 
-	is_in_super_mode: "bool :: false", //virtual
+	is_in_super_attack_mode: "bool :: false", //virtual
 
 
 
@@ -546,7 +546,7 @@ properties: {
 		#####-- in-game item selection --#####
 	toggle_ability: "def( enum { left, right } direction) -> commands
 		[
-			if(not is_in_super_mode,
+			if(not is_in_super_attack_mode,
 				if(not underwater,
 					toggle_ability_by_category(direction, enum primary_ability),
 					toggle_ability_by_category(direction, enum underwater_ability)
