--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -149,7 +149,7 @@
 				
 				set(graphic.brightness, 255/if(has_enough_mana or player.current_ability = enum item_tongue, 1, 3)),
 				set(si_uniforms.speed, if(has_enough_mana, 0.012, 0.004)),
-				set(si_uniforms.show_ants, player.is_in_super_mode),
+				set(si_uniforms.show_ants, player.is_in_super_attack_mode),
 
 				if(has_just_changed,
 					do_carousel_anim
@@ -157,7 +157,7 @@
 			]
 				where has_enough_mana = player.current_mana_availability
 				where item_info = def(int offset) -> class inventory_item
-					(if(not player.is_in_super_mode,
+					(if(not player.is_in_super_attack_mode,
 						if(not player.underwater,
 							(if(normalized_index = 0, 
 								player.item_info(player.current_ability),
