--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -627,8 +627,19 @@ properties: {
 				)
 			)",
 
-	is_in_super_mode: "bool :: stomach_contents_allow_super_attack",
-	
+	is_in_super_attack_mode: "bool ::
+		stomach_contents_would_allow_super_attack
+		and
+		switch(me.item_info(current_ability).item_element_type,
+			enum fire,		has_item(enum item_super_fire_pendant),
+			enum ice,		false,
+			enum energy,	has_item(enum item_super_energy_pendant),
+			enum acid,		has_item(enum item_super_acid_pendant),
+			enum arcane,	has_item(enum item_super_arcane_pendant),
+			false
+		)
+	",
+
 	
 #-------------------------- mana --------------------------#
 	mana_base_regen_coefficient: "10*(0.5 + if(has_item(enum item_lesser_mana_talisman), 0.3333, 0.0) + if(has_item(enum item_greater_mana_talisman), 0.6667, 0.0))",
@@ -719,12 +730,12 @@ properties: {
 			
 	//Mana state matrix used by ability_display
 	current_mana_availability: "bool :: 
-		if(not swallowed_object or (not stomach_contents_allow_super_attack) or current_ability = enum item_tongue,
+		if(not swallowed_object or (not stomach_contents_would_allow_super_attack) or current_ability = enum item_tongue,
 			ability_is_charged_up( current_ability ), 
 			ability_is_charged_up( current_super_ability )
 		)",
 		
-	stomach_contents_allow_super_attack: "bool <- bool(swallowed_object and not swallowed_object is obj padlock_key)",
+	stomach_contents_would_allow_super_attack: "bool <- bool(swallowed_object and not swallowed_object is obj padlock_key)",
 	
 	//used for regular, active consumption - note that we DON'T subtract mana if we're cooling down, otherwise we'd double-dip
 	use_mana_for_ability: "def(InventoryItemType ability_name) -> commands [
@@ -1106,7 +1117,7 @@ properties: {
 	
 	spit_attack_spew_projectile: "commands :: 
 			if(swallowed_object,
-				[if(not stomach_contents_allow_super_attack, standard_spit_attack,
+				[if(not stomach_contents_would_allow_super_attack, standard_spit_attack,
 					switch( current_super_ability,
 						enum item_super_fire_pendant, if(ability_is_charged_up(enum item_super_fire_pendant) and has_item(enum item_super_fire_pendant),
 										[super_fire_explosion_trigger, use_mana_for_ability(enum item_super_fire_pendant), set(swallowed_object, null), do_sound, empty_stomach({kill_contents: true})],
