Partial work towards getting rid of a separate iterator for super abilities.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -640,6 +640,18 @@ properties: {
 		)
 	",
 
+	super_ability_that_corresponds_to_this_regular_ability: "def(InventoryItemType regular_ability) -> InventoryItemType | null
+		switch(me.item_info(regular_ability).item_element_type,
+			enum fire,		enum item_super_fire_pendant,
+			enum ice,		null,
+			enum energy,	enum item_super_energy_pendant,
+			enum acid,		enum item_super_acid_pendant,
+			enum arcane,	enum item_super_arcane_pendant,
+			null
+		)
+	",
+
+	current_super_ability: "super_ability_that_corresponds_to_this_regular_ability( current_ability )",
 	
 #-------------------------- mana --------------------------#
 	mana_base_regen_coefficient: "10*(0.5 + if(has_item(enum item_lesser_mana_talisman), 0.3333, 0.0) + if(has_item(enum item_greater_mana_talisman), 0.6667, 0.0))",
@@ -730,9 +742,12 @@ properties: {
 			
 	//Mana state matrix used by ability_display
 	current_mana_availability: "bool :: 
-		if(not swallowed_object or (not stomach_contents_would_allow_super_attack) or current_ability = enum item_tongue,
-			ability_is_charged_up( current_ability ), 
-			ability_is_charged_up( current_super_ability )
+		if(is_in_super_attack_mode,
+			ability_is_charged_up( current_ability ),
+			if(current_super_ability != null,
+				ability_is_charged_up( current_super_ability ),
+				false
+			)
 		)",
 		
 	stomach_contents_would_allow_super_attack: "bool <- bool(swallowed_object and not swallowed_object is obj padlock_key)",
