--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -157,27 +157,21 @@
 			]
 				where has_enough_mana = player.current_mana_availability
 				where item_info = def(int offset) -> class inventory_item
-					(if(not player.is_in_super_attack_mode,
+				(
+					player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, item_category) )
+
+					where item_category = if(not player.is_in_super_attack_mode,
 						if(not player.underwater,
-							(if(normalized_index = 0, 
-								player.item_info(player.current_ability),
-								player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, enum primary_ability) )
-							)),
-					
-							(if(normalized_index = 0, 
-								player.item_info(player.current_underwater_ability),
-								player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, enum underwater_ability) )
-							)),
-						),
-						
-						(if(normalized_index = 0, 
-							player.item_info(player.current_super_ability),
-							player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, enum super_ability) )
-						)) 						
-						/*
-							There's a little bit of 'special logic' here in the where clause - this is intended to take our offset (i.e. which of the 5 graphical cells we could be looking at), and change the values from `[0, 1, 2, 3, 4]`, to being `[-2, -1, 0, 1, 2]`.  0 is meant to specially represent the -current- ability the player has selected.
-						*/
-					) where normalized_index =  offset - index(graphic_cells, graphic)
+							enum primary_ability,
+							enum underwater_ability
+						),					
+						enum super_ability
+					)
+
+					/*
+						There's a little bit of 'special logic' here in the where clause - this is intended to take our offset (i.e. which of the 5 graphical cells we could be looking at), and change the values from `[0, 1, 2, 3, 4]`, to being `[-2, -1, 0, 1, 2]`.  0 is meant to specially represent the -current- ability the player has selected.
+					*/
+					where normalized_index =  offset - index(graphic_cells, graphic)
 				)
 
 				
