Most of the work towards making the hud ability components have independent status for 'lighting up' as enabled.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -630,14 +630,15 @@ properties: {
 	is_in_super_attack_mode: "bool ::
 		stomach_contents_would_allow_super_attack
 		and
-		switch(me.item_info(current_ability).item_element_type,
-			enum fire,		has_item(enum item_super_fire_pendant),
-			enum ice,		false,
-			enum energy,	has_item(enum item_super_energy_pendant),
-			enum acid,		has_item(enum item_super_acid_pendant),
-			enum arcane,	has_item(enum item_super_arcane_pendant),
+		has_super_pendant_for_ability(current_ability)
+	",
+
+	has_super_pendant_for_ability: "def(InventoryItemType regular_ability) -> bool
+		if(super_version != null,
+			has_item(super_version),
 			false
 		)
+		where super_version = super_ability_that_corresponds_to_this_regular_ability( regular_ability )
 	",
 
 	super_ability_that_corresponds_to_this_regular_ability: "def(InventoryItemType regular_ability) -> InventoryItemType | null
@@ -741,14 +742,18 @@ properties: {
 			) < mana_cooldown_time[ability_name]",
 			
 	//Mana state matrix used by ability_display
-	current_mana_availability: "bool :: 
-		if(is_in_super_attack_mode,
-			ability_is_charged_up( current_ability ),
-			if(current_super_ability != null,
-				ability_is_charged_up( current_super_ability ),
+	should_make_hud_graphic_look_enabled_for_this_item: "def(InventoryItemType ability_name) -> bool
+		if(stomach_contents_would_allow_super_attack,
+			if(has_super_pendant_for_ability(ability_name),
+				if(super_version != null, //this is redundant but required for type coercion
+					ability_is_charged_up( super_version ),
+					false
+				) where super_version = super_ability_that_corresponds_to_this_regular_ability( ability_name ),
 				false
-			)
+			),
+			ability_is_charged_up( ability_name )
 		)",
+
 		
 	stomach_contents_would_allow_super_attack: "bool <- bool(swallowed_object and not swallowed_object is obj padlock_key)",
 	
