--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -143,24 +143,24 @@
 	on_process: "
 		if(player is obj frogatto_playable,
 			[
-				map(graphic_cells,
-					set_to_animation(value, item_info(index).hud_img_rect )
-				),
+				map(graphic_cells, [
+					set_to_animation(value, item_info(index).hud_img_rect ),
+					set(value.brightness, 255/if( is_this_ability_enabled(index), 1, 3) ),
+				]),
 				
-				set(graphic.brightness, 255/if(has_enough_mana or player.current_ability = enum item_tongue, 1, 3)),
-				set(si_uniforms.speed, if(has_enough_mana, 0.012, 0.004)),
+				set(si_uniforms.speed, if(is_this_ability_enabled(0), 0.012, 0.004)),
 				set(si_uniforms.show_ants, player.is_in_super_attack_mode),
 
 				if(has_just_changed,
 					do_carousel_anim
 				),				
 			]
-				where has_enough_mana = player.current_mana_availability
+				where is_this_ability_enabled = def(int ability_index) -> bool player.should_make_hud_graphic_look_enabled_for_this_item(item_info(ability_index).id)
 				where item_info = def(int offset) -> class inventory_item
 				(
 					player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, item_category) )
 
-					where item_category = if(not player.is_in_super_attack_mode,
+					where item_category = if(not player.stomach_contents_would_allow_super_attack,
 						if(not player.underwater,
 							enum primary_ability,
 							enum underwater_ability
