Fixed a regression caused by the elimination of a proper super-ability-iterator that made it so the player couldn't spit projectiles.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -356,7 +356,7 @@ properties: {
 
 	current_underwater_ability: { type: "InventoryItemType", init: "enum item_underwater_bubble_attack" },
 
-	is_in_super_attack_mode: "bool :: false", //virtual
+	is_super_attack_completely_viable_besides_mana_and_cooldowns: "bool :: false", //virtual
 
 	super_ability_that_corresponds_to_this_regular_ability: "def(InventoryItemType regular_ability) -> InventoryItemType | null
 		null //virtual
