--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -149,7 +149,7 @@
 				]),
 				
 				set(si_uniforms.speed, if(is_this_ability_enabled(0), 0.012, 0.004)),
-				set(si_uniforms.show_ants, player.is_in_super_attack_mode),
+				set(si_uniforms.show_ants, player.is_super_attack_completely_viable_besides_mana_and_cooldowns),
 
 				if(has_just_changed,
 					do_carousel_anim
@@ -160,7 +160,7 @@
 				(
 					player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, item_category) )
 
-					where item_category = if(not player.stomach_contents_would_allow_super_attack,
+					where item_category = if(not player.is_super_attack_completely_viable_besides_mana_and_cooldowns,
 						if(not player.underwater,
 							enum primary_ability,
 							enum underwater_ability
