--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -627,7 +627,7 @@ properties: {
 				)
 			)",
 
-	is_in_super_attack_mode: "bool ::
+	is_super_attack_completely_viable_besides_mana_and_cooldowns: "bool ::
 		stomach_contents_would_allow_super_attack
 		and
 		has_super_pendant_for_ability(current_ability)
@@ -1137,18 +1137,19 @@ properties: {
 	
 	spit_attack_spew_projectile: "commands :: 
 			if(swallowed_object,
-				[if(not stomach_contents_would_allow_super_attack, standard_spit_attack,
+				[if(not is_super_attack_completely_viable_besides_mana_and_cooldowns,
+					standard_spit_attack,
 					switch( current_super_ability,
-						enum item_super_fire_pendant, if(ability_is_charged_up(enum item_super_fire_pendant) and has_item(enum item_super_fire_pendant),
+						enum item_super_fire_pendant, if(ability_is_charged_up(enum item_super_fire_pendant),
 										[super_fire_explosion_trigger, use_mana_for_ability(enum item_super_fire_pendant), set(swallowed_object, null), do_sound, empty_stomach({kill_contents: true})],
 										standard_spit_attack),
-						enum item_super_energy_pendant, if(ability_is_charged_up(enum item_super_energy_pendant) and has_item(enum item_super_energy_pendant),
+						enum item_super_energy_pendant, if(ability_is_charged_up(enum item_super_energy_pendant),
 										[super_energyshot_fire_projectile, use_mana_for_ability(enum item_super_energy_pendant), set(swallowed_object, null), do_sound, empty_stomach({kill_contents: true})],
 										standard_spit_attack),
-						enum item_super_arcane_pendant, if(ability_is_charged_up(enum item_super_arcane_pendant) and has_item(enum item_super_arcane_pendant),
+						enum item_super_arcane_pendant, if(ability_is_charged_up(enum item_super_arcane_pendant),
 										[super_homingshot_fire_projectile, use_mana_for_ability(enum item_super_arcane_pendant), set(swallowed_object, null), do_sound, empty_stomach({kill_contents: true})],
 										standard_spit_attack),
-						enum item_super_acid_pendant, if(ability_is_charged_up(enum item_super_acid_pendant) and has_item(enum item_super_acid_pendant),
+						enum item_super_acid_pendant, if(ability_is_charged_up(enum item_super_acid_pendant),
 										[super_acidshot_fire_projectile, use_mana_for_ability(enum item_super_acid_pendant), set(swallowed_object, null), do_sound, empty_stomach({kill_contents: true})],
 										standard_spit_attack),
 						enum item_tongue, standard_spit_attack))
@@ -1216,7 +1217,9 @@ properties: {
 
 							map(filter(level.active_chars, value is obj standing_npc), if(can_see(me,value), commands<- eval(value.consider_object, {me: value, obj: swallowed_object, level: level}))),
 						],
-				  set(current_ability, enum item_tongue)]) where do_sound = lib.sound.play_sound(me, 'uber-belch')",
+				  set(current_ability, enum item_tongue)]) where do_sound = lib.sound.play_sound(me, 'uber-belch'
+			)",
+
 
 #-------------------------- item management --------------------------#
 	do_key_check: "commands :: if(swallowed_object is obj padlock_key, if( size(swallowed_object.valid_levels) > 0, if(not level.id in swallowed_object.valid_levels, 
