Fixed a regression on the 'coasting coconuts' fix where they weren't bouncy anymore.

--- a/data/object_prototypes/base/throwable_projectile.cfg
+++ b/data/object_prototypes/base/throwable_projectile.cfg
@@ -66,7 +66,12 @@ on_process_on_back: "[add(_on_back_count,1),if(_on_back_count > (on_back_duratio
 on_collide_object_body: "",
 
 
-on_collide_feet: "animation('thrown')",
+on_collide_feet: "[
+	if(arg.collide_with is obj throwable_projectile,
+		animation('thrown'),
+	),
+	proto_event('throwable', 'collide_feet'),
+]",
 
 
 }
