Restrict items to only letting you buy ones that correspond to the elements you already have.

--- a/data/object_prototypes/general/buyable_item.cfg
+++ b/data/object_prototypes/general/buyable_item.cfg
@@ -33,7 +33,15 @@ properties: {
 
 #-------------------------- item_acquirable settings --------------------------#
 	should_lock_player_and_do_fancy_acquisition_interlude: "bool :: true",
-	
+
+
+#-------------------------- eligibility checks --------------------------#
+	does_player_have_required_element_to_buy_this: "bool :: if(item_info.item_element_type = null,
+		true,
+		item_info.item_element_type in frogatto.elements_owned_by_player
+	)",
+
+
 #-------------------------- transaction processing --------------------------#
 	core_conversation_mechanics: "commands ::
 		[
@@ -72,18 +80,23 @@ properties: {
 			[
 				speech_dialog(self, short_store_description + [~But, since you don't have a trophy right now,\\nwe'll put that on hold for the time being.~]),
 			],
-			[
-				speech_dialog(self, short_store_description + [~I'm willing to trade this for\\none of those golden trophies.~]),
-				speech_dialog(self, [~Do we want to make a deal?~,
-					~Yes~,	[
-						fire_event('bought'),
-						sound('coins-buy.wav'),
-						frogatto.add_item( available_trophy.id, -1),
-						spawn('text_flash_negative',midpoint_x,midpoint_y-20,1,[set(child.txt,'- one trophy')])
-						],
-					'default_skip', ~No~, []
-				])
-			]
+			if(not does_player_have_required_element_to_buy_this,
+				[
+					speech_dialog(self, short_store_description + [~However, you don't have the elemental magic\\nI'd need to make this work.~,~Once you get your first talisman of this type,\\ncome back and try again.~]),
+				],
+				[
+					speech_dialog(self, short_store_description + [~I'm willing to trade this for\\none of those golden trophies.~]),
+					speech_dialog(self, [~Do we want to make a deal?~,
+						~Yes~,	[
+							fire_event('bought'),
+							sound('coins-buy.wav'),
+							frogatto.add_item( available_trophy.id, -1),
+							spawn('text_flash_negative',midpoint_x,midpoint_y-20,1,[set(child.txt,'- one trophy')])
+							],
+						'default_skip', ~No~, []
+					])
+				]
+			)
 		)",
 	
 	
