Fixed a possible leak where recolor attaches were never getting removed.

--- a/data/objects/effects/attaches/effects_attache_recolor.cfg
+++ b/data/objects/effects/attaches/effects_attache_recolor.cfg
@@ -36,8 +36,15 @@
 
 		unset_colors:  "[
 			set(root_parent_object.use_forced_hue, false),
-			set(root_parent_object.recolor_attaches, filter(root_parent_object.recolor_attaches, value != me)),
+			remove_from_root_parent,
 		]",
+
+
+		remove_from_root_parent: "commands ::	if(me in root_parent_object.recolor_attaches,
+													; set(root_parent_object.recolor_attaches,
+														filter(root_parent_object.recolor_attaches, value != me)
+													)
+												)",
 
 
 	#-------------------------- gradient logic --------------------------#
