Probably a good idea for this to be idempotent, but it's not solving the issue of multiple colors being attached.

--- a/data/objects/effects/attaches/status_effect_attache.cfg
+++ b/data/objects/effects/attaches/status_effect_attache.cfg
@@ -27,18 +27,20 @@
 										)",
 												//debug('removing status_effect ${me.kind} from ${me.hittable_parent.type} at ${level.cycle}'), 
 		
-		spawn_visual_fx: "commands ::	spawn('effects_attache_batch', mid_x, mid_y, {
-											parent: me,
-											effects_preset: info_for_kind.visual_fx_type,
-											timeout: 1000000,
-											time_to_die: 50,
-										})",
+		
+		visual_fx: "obj effects_attache_batch ::
+			object('effects_attache_batch', mid_x, mid_y, {
+				parent: me,
+				effects_preset: info_for_kind.visual_fx_type,
+				timeout: 1000000,
+				time_to_die: 50,
+			})",
 		
 #-------------------------- prototype overrides --------------------------#
 		do_setup: "commands ::	[
 									initialize_position,
 									set(cycle_started_at, level.cycle),
-									spawn_visual_fx
+									add_object(visual_fx)
 									;
 									set(position_created_at, {x: hittable_parent.x, y: hittable_parent.y}),
 								]",
